--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "swift-rider",
+  "homepage":"https://decadevs.github.io/node-live-project-frontend-sq012-swift-rider",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "yarn build",
+    "deploy": "gh-pages build",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^4.0.0",
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
     "react": "^18.2.0",
