--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swift-rider",
-  "homepage":"https://decadevs.github.io/node-live-project-frontend-sq012-swift-rider",
+  "homepage": "https://decadevs.github.io/node-live-project-frontend-sq012-swift-rider",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -18,6 +18,7 @@
     "lint-staged": "^13.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.5"
   },
   "devDependencies": {
