--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,12 @@
         "plugin:prettier/recommended"
     ],
     "overrides": [
+        {
+            "files": ["*.ts", "*.tsx"],
+            "rules": {
+                "@typescript-eslint/no-unused-vars": ["error"]
+            }
+        }
       ],
     "parserOptions": {
         "ecmaVersion": "latest",
