--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.26",
+    "axios": "^1.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "gh-pages": "^4.0.0",
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.5",
-    "styled-components": "^5.3.6"
+    "react-toastify": "^9.1.1",
+    "styled-components": "^5.3.6",
+    "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
