--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.5",
+    "react-switch": "^7.0.0",
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
     "toastify": "^2.0.1"
