--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "gh-pages": "^4.0.0",
     "husky": "^8.0.2",
+    "jsonwebtoken": "^9.0.0",
     "lint-staged": "^13.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^6.4.5",
+    "react-router-dom": "^6.5.0",
+    "react-switch": "^7.0.0",
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
     "toastify": "^2.0.1"
