--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_APP_GOOGLE_MAP_API_KEY=AIzaSyAzDxDYPtdQU8c2ScdLwvefTalEXCHaKZs
+APP_URI=http://localhost:4000
+APP_URL=http://localhost:4000/api
