--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.3",
     "@mui/x-data-grid": "^5.17.18",
+    "@paystack/inline-js": "^2.12.6",
     "@react-google-maps/api": "^2.17.1",
     "@types/axios": "^0.14.0",
     "@types/react-router-dom": "^5.3.3",
@@ -24,9 +25,11 @@
     "husky": "^8.0.2",
     "jsonwebtoken": "^9.0.0",
     "lint-staged": "^13.1.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-google-autocomplete": "^2.7.2",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.5.0",
     "react-switch": "^7.0.0",
