--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-google-places-autocomplete": "^3.4.0",
     "react-icons": "^4.7.1",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.5.0",
     "react-switch": "^7.0.0",
     "react-toastify": "^9.1.1",
@@ -37,6 +39,7 @@
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-places-autocomplete": "^7.2.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.46.0",
     "@vitejs/plugin-react": "^3.0.0",
