--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.3",
     "@mui/x-data-grid": "^5.17.18",
+    "@paystack/inline-js": "^2.12.6",
     "@react-google-maps/api": "^2.17.1",
     "@types/axios": "^0.14.0",
     "@types/react-router-dom": "^5.3.3",
@@ -24,14 +25,15 @@
     "husky": "^8.0.2",
     "jsonwebtoken": "^9.0.0",
     "lint-staged": "^13.1.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-google-places-autocomplete": "^3.4.0",
     "react-icons": "^4.7.1",
     "react-otp-input": "^2.4.0",
-    "react-responsive-modal": "^6.4.1",
     "react-places-autocomplete": "^7.3.0",
+    "react-responsive-modal": "^6.4.1",
     "react-router-dom": "^6.5.0",
     "react-scroll-to-bottom": "^4.2.0",
     "react-switch": "^7.0.0",
@@ -43,8 +45,8 @@
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "@types/react-scroll-to-bottom": "^4.2.0",
     "@types/react-places-autocomplete": "^7.2.9",
+    "@types/react-scroll-to-bottom": "^4.2.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.46.0",
     "@vitejs/plugin-react": "^3.0.0",
