--- a/package.json
+++ b/package.json
@@ -24,19 +24,24 @@
     "husky": "^8.0.2",
     "jsonwebtoken": "^9.0.0",
     "lint-staged": "^13.1.0",
+    "pusher-js": "^8.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.5.0",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-switch": "^7.0.0",
     "react-toastify": "^9.1.1",
+    "socket.io-client": "^4.5.4",
     "styled-components": "^5.3.6",
     "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-scroll-to-bottom": "^4.2.0",
+    "@types/socket.io-client": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.46.0",
     "@vitejs/plugin-react": "^3.0.0",
