--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.0",
     "lint-staged": "^13.1.0",
     "moment": "^2.29.4",
+    "pusher-js": "^8.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
